12930
The following evaluate as expected:

{code}
scala> 0.
res9: Double = 0.0

scala> 0.f
res10: Float = 0.0

scala> 0.e1
res11: Double = 0.0

scala> 0. fx
<console>:5: error: value fx is not a member of Double
       0. fx
          ^
{code}

However the following behaviour was unexpected:

{code}
scala> 0.fx
<console>:5: error: value fx is not a member of Int
       0.fx
         ^

scala> 0.asInstanceOf[Short]
res14: Short = 0
{code}
